# docs/swagger.yaml
@@ -79,6 +79,24 @@ paths:
       summary: Get all wallets
       tags:
       - wallet
+    post:
+      consumes:
+      - application/json
+      description: Create a wallet
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/wallet.Wallet'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/wallet.Err'
+      summary: Create a wallet
+      tags:
+      - wallet
   /api/v1/wallets/:wallet-type:
     get:
       consumes:
